fixes json word-wrap problem

--- a/public/sass/components/snapshot-content.scss
+++ b/public/sass/components/snapshot-content.scss
@@ -30,4 +30,7 @@
   padding: 2% 5%;
   width: 50%;
   overflow: auto;
+  & code {
+    word-wrap: break-word;
+  }
 }
