--- a/public/sass/components/snapshot-list.scss
+++ b/public/sass/components/snapshot-list.scss
@@ -27,6 +27,13 @@
 
 .snapshot-list__item {
   position: relative;
+  overflow: hidden;
+  &.item-active {
+    overflow: visible;
+    &:before {
+      display: none;
+    }
+  }
   &:hover {
     color: white;
     &:before {
@@ -43,7 +50,7 @@
     width: 100%;
     height: 100%;
     background: $color-500-grey;
-    transform: translateX(-110%);
+    transform: translateX(110%);
     opacity: 0;
     transition: transform .2s ease-in-out, opacity .2s ease-in;
     z-index: 1;
@@ -87,7 +94,7 @@
   }
 }
 
-//This element selector is here due to the load orde of the components' css
+//This element selector is here due to the load order of the components' css
 //which always loads last and overrides this selector
 //no matter what :'(
 div.index-list__item__index {
